hero section styled

--- a/css-scrimba/css/main.css
+++ b/css-scrimba/css/main.css
@@ -1,6 +1,9 @@
 body {
+  overflow-x: hidden;
+  width: 100vw;
   margin: 0px;
   padding: 0px;
+  background-color: rgb(245, 101, 57);
   background-color: rgb(33, 33, 33);
   font-family: "Poppins";
 }
@@ -25,17 +28,66 @@ body {
 .navbar .logo span {
   color: rgb(254, 248, 248);
 }
+.navbar .mobile-menu {
+  cursor: pointer;
+}
 .navbar .container {
   display: flex;
-  place-content: space-between;
+  justify-content: space-between;
 }
 .navbar nav {
   display: none;
 }
-.navbar .mobile-menu {
-  cursor: pointer;
+
+section {
+  padding: 5em 2em;
 }
 
-.section {
-  padding: 1em;
+a {
+  color: rgb(219, 199, 199);
+}
+
+ul {
+  text-decoration: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.hero {
+  text-align: center;
+}
+.hero .left-col .subhead {
+  color: rgb(219, 206, 206);
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: bold;
+}
+.hero .left-col h1 {
+  font-size: 2.5em;
+  line-height: 1.2em;
+  color: var(--primary-color);
+  margin-top: 0.2rem;
+}
+.hero .left-col .primary-cta {
+  text-decoration: none;
+  display: inline-block;
+  padding: 0.6em 1.5em;
+  font-size: 1.3em;
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 5em;
+  font-weight: bold;
+  color: var(--secondry-color);
+}
+.hero .left-col .primary-cta:hover {
+  background-color: var(--secondry-color);
+  color: white;
+  border: 2px solid white;
+}
+.hero .left-col .watch-video-cta {
+  display: block;
+  margin-top: 1.2em;
+}
+.hero .left-col img {
+  margin-right: 0.5em;
 }/*# sourceMappingURL=main.css.map */
